<resources>
    <string name="app_name">ABAKADA</string>
    <string name="twoCatsStory1">Once upon a time, two cats used to live in a village. They were good friends and both used to live very lovingly with each other.


One day both the cats became very hungry while playing. They saw a piece of bread at some distance.  They started fighting over that bread. One cat said,” I found it first so it is mine.” The other cat was saying the same thing.


The first cat took two pieces of bread and extended one piece towards the second cat. Seeing this, the other cat said again, "What is this, you gave me a small piece. That is wrong.


A monkey on the tree was seeing them fighting over the bread and wanted to eat that bread too. He said,’’ Why are you quarreling? I can help you because I have a scale which can divide the bread into equal amounts.”


Both cats liked the monkeys’ advice. The monkey climbed the tree and brought the scale. He put both the pieces in a pan. He deliberately divided the bread into unequal amounts and said, "Hey, this piece is big, let\'s make both equal and after saying this, he ate a little bit from the big piece and ate it.
</string>
    <string name="twoCatsStory2">

In this way, every time the scale became heavy, he broke a little bread from that side and started putting it in his mouth. Both the cats were now terrified. She still quietly waited for the monkey\'s decision as they did not want to give each other more amount of bread.


At last small pieces of bread were in pans of the scale. The monkey said, " As you have seen that I have done the hard work of dividing bread with my scale so I must get the wages of my hard work”. He ate the rest of the pieces of bread. The poor cats went on empty stomachs from there.
    </string>
    <string name="twoCatsStory3">Both the cats had realized their mistake and felt that others could take advantage of their weakness.


The Moral of the Story
This story of two cats and a monkey is indeed an amazing story with a very important lesson to learn. After reading these stories about cats, we know that we should always be careful that the third person who is watching the two friends fighting is not helping. On the contrary, he is taking advantage of the fight and he is using the two friends for his own benefit. This story teaches us that “when two people fight, it’s always the third person who gets the benefit”.
    </string>
    <string name="theLionStory1">
        Years and years ago, once there was a lion sleeping in the forest under a big tree. A mouse, who lived in the forest too, started playing while moving up and down the lion’s body. She also accidentally ran across the lion’s nose once.
    </string>
    <string name="theLionStory2">
        This soon awakened the lion, and he held the little mouse in his paws. The mouse began to tremble as he knew that the lion was angry and could kill him right there. "Pardon, O King!" pleaded the little mouse. "Forgive me this time. I shall never repeat it, and I shall never forget your kindness. Who knows, I may be able to give you a good turn one of these days!”


The lion was somehow in a good mood. Hence, he set the mouse free from his paws. Yet he could not be more amused by the idea of how a tiny mouse could ever help the king of the jungle.


After a few days, the mouse suddenly heard the roar of the lion. When she went to look at what’s the matter, she found out that the lion was captured and trapped in a net by his prey. Seeing the lion in such a condition, she immediately started gnawing the ropes of the net until it freed the lion.
    </string>
    <string name="theLionStory3">
        The lion thanked the little mouse. But the mouse was happy that she could finally repay her debt for sparing her life once. Since then the lion and mouse became good friends, and they lived happily ever after.
    </string>
    <string name="ugly1">
        Once upon a time a Mama Duck sat on her nest.

“These eggs are taking a long time to hatch,” she thought. But a Mama duck must keep her eggs warm until they do hatch.

At last, the eggs began to crack. Pretty yellow ducklings came out of their shells. They shook their little wings and said, “Quack, quack!”

Mama Duck was very happy. They were all so cute.

    </string>
    <string name="ugly2">
    Mama Duck said, “Come on ducklings, off we go to the pond for your first swim.” Then she counted them; one, two, three, four, five.

    “Oh dear!” she thought, “I should have six ducklings!”

    There was one big egg still in the nest. “Oh well,” thought Mama Duck, “I\'d better sit on my nest again and wait.”

    The next day, the big egg hatched and out came a baby boy duckling. He was much bigger than the others. He was dark grey and not yellow. And he had longer legs than the others.

    One of the yellow ducklings pointed at him, “He doesn\'t look like one of us!”

    “Such an ugly duckling!” said another.

    “That is not a nice thing to say,” said Mama Duck, “he hatched from the same nest as you. Now, off to the pond for your very first swim.”
</string>
    <string name="ugly3">
    The other ducklings quacked, “Ugly! Ugly! Ugly!”

    The Ugly Duckling did not know why the other ducklings were being so horrible to him.

    Each yellow duckling jumped in the pond and swam behind Mama Duck. The Ugly Duckling jumped in and started to paddle, too.

    “He\'s a good swimmer,” Mama Duck thought.

    The Ugly Duckling tried to play with his brothers and sisters. But they yelled, “Go away, you\'re ugly and grey. And your legs are too long!”

    One day, one of the yellow ducklings said to the Ugly Duckling, “We don\'t like you and wish you would go away!”

    Then they all quacked, “Go away, go away, go away!!”

    The Ugly Duckling was sad. “Maybe I should just go,” he thought to himself.

    That night, the Ugly Duckling flew away to the other side of the pond. He met two grown-up ducks.

    “Can I stay with you, please?” asked the Ugly Duckling.

    “All right”, said one of the ducks, “but just keep out of our way.”

    “Woof! Woof!”  Suddenly a big hungry dog started chasing the two ducks. They flew up in the air, and some feathers fell down on the ground.

    The poor Ugly Duckling was frightened. The dog sniffed and sniffed at the Ugly Duckling then turned away.

    “I am so ugly that even a big hungry dog doesn\'t want me,” thought the Ugly Duckling with a tear in his eye.
</string>
    <string name="ugly4">
        Soon he found a new pond. He looked up and saw a flock of big white birds flying by. They were the most beautiful birds he had ever seen!

He stayed at that pond all by himself for a long time.

Then winter came and the cold wind and the dark clouds made the poor Ugly Duckling very sad and lonely.

He had to go into the cold pond to fish, but it was getting hard to swim. The lake turned to ice. One day he felt the water freezing around him and trapping him in the water.


    </string>
    <string name="ugly5">
        “Oh, I’m so tired!” he thought, paddling hard. The ice got thicker and thicker.

Suddenly two big hands picked him up.

“You poor little thing!” said a farmer. He took the Ugly Duckling back to his warm farmhouse.

For the rest of that winter, the kind farmer looked after the Ugly Duckling.
    </string>
    <string name="ugly6">
        Then spring came.

“Time for you to go to the pond to swim again, that’s what you were born to do,” said the farmer. He took the young bird back to the pond where he had found him and set him down on the water.

“I feel so strong now!” said the young bird to himself, and flapped his wings.

Just then a flock of those same beautiful birds he had seen before landed on the water.

“I know I’m ugly,” he said to them, “so I will go away.” A great big tear rolled down his cheek.

But when he opened his eyes, he saw a reflection in the water. It looked just like one of those beautiful white birds. Why was it so close to him? He jumped back. And the reflection jumped back, too.

He stretched out his long neck and the reflection stretched its neck, too.

“We wish you would stay,” said one of the beautiful birds.

“Yes, stay with us!” said another, “we can all be great friends.”
    </string>
    <string name="ugly7">
        Then he knew just what had happened!  He wasn’t an ugly grey bird with funny long legs any more. He was a beautiful swan after all!

Suddenly, all the other swans flapped their wings and took off into the sky.

“Come with us,” one called back.

So he flapped his beautiful white, swanny wings as fast as they could go and joined his new friends.

The End
    </string>
    <string name="theUglyTree1">
        Long back, there was a beautiful forest full of dense and green trees. All these trees were huge and straight and had beautiful branches. But, out of all these trees, there was one tree with crooked branches. It was different from the other trees and was even shorter in height. It hated itself because of how ugly and bent it was.
    </string>
    <string name="theUglyTree2">
        All the other trees in the forest made fun of the bent tree and mocked it by calling it an ugly tree. He felt ashamed to be this ugly and envied all the other trees in the forest. He sighed and said, “Oh! Look at those tall trees. I wish I was as beautiful as them. I hate my hunched and crooked branches.”
    </string>
    <string name="theUglyTree3">
        One day, a woodcutter came to the forest to cut some trees. He came across the ugly tree and thought to himself, “Look at this crooked and bent tree. There is no use in cutting this tree, it will be of no help to me. I would better cut down all the tall trees.”
    </string>
    <string name="theUglyTree4">
        Soon all the trees were cut down by the woodcutter. He left the forest, sparing the crooked ugly tree. The tree looked around and saw all of the fellow trees were cut down completely. It now understood the value of his crooked and twisted branches. It thanked God for making it a twisted tree and also how it was saved from being cut down because of its crooked branches.
    </string>
    <string name="jackAndbeans">
        There was once upon a time a poor widow who had an only son named Jack, and a cow named Milky-White.
    All they had to live on was the milk the cow gave every morning, which they carried to the market and sold -
    until one morning Milky-White gave no milk.

    “What shall we do, what shall we do?” said the widow, wringing her hands.

    “Cheer up mother, I’ll go and get work somewhere,” said Jack.
    </string>
</resources>