<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".uglyDuck">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="THE UGLY DUCKLING"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/duck1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/ugly1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/duck2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/ugly2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/duck3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ugly3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/duck4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ugly4"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/duck5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ugly5"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ugly6"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:text="@string/ugly7"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/duck6"
                android:layout_marginBottom="40dp"/>



        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>