<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".uglytree">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_title"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="THE UGLY TREE"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/uglytree1" />


            <TextView
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="monospace"
                android:text="@string/theUglyTree1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/uglytree2" />

            <TextView
                android:id="@+id/part2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="monospace"
                android:text="@string/theUglyTree2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/uglytree3" />

            <TextView
                android:id="@+id/part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="monospace"
                android:text="@string/theUglyTree3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/uglytree4" />


            <TextView
                android:id="@+id/part4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="monospace"
                android:text="@string/theUglyTree4"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>