<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".twoCatsStory">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="TWO CATS AND THE MONKEY"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/twocats1"
                android:layout_margin="15dp"/>


<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:fontFamily="monospace"-->
<!--                android:text=""-->
<!--                android:textAllCaps="false"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="20dp"-->
<!--                android:textStyle="bold" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/twoCatsStory1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/twocats2"
                android:layout_margin="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/twoCatsStory2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/twocats3"
                android:layout_margin="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/twoCatsStory3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginBottom="50dp"/>





        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>