<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".lionAndTheMouse">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="THE LION AND THE MOUSE"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/thelionn1" />


            <TextView
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="monospace"
                android:text="@string/theLionStory1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/thelionn2" />

            <TextView
                android:id="@+id/part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="monospace"
                android:text="@string/theLionStory2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:src="@drawable/thelionn3" />

            <TextView
                android:id="@+id/part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="monospace"
                android:text="@string/theLionStory3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="15dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/thelionn4" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>